--- a/TypeScript-Parte-1/alurabank/tsconfig.json
+++ b/TypeScript-Parte-1/alurabank/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "target": "es6", // Versão que o ts passara apos ser compilado
         "outDir": "app/js",
-        "noEmitOnError": true // Não gera arquivo JS caso tenha algum erro durante a compilacao
+        "noEmitOnError": true, // Não gera arquivo JS caso tenha algum erro durante a compilacao
+        "noImplicitAny": true 
     },
     "include": [
         "app/ts/**/*"
