--- a/TypeScript-Parte-1/alurabank/tsconfig.json
+++ b/TypeScript-Parte-1/alurabank/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "es6", // Versão que o ts passara apos ser compilado
         "outDir": "app/js",
         "noEmitOnError": true, // Não gera arquivo JS caso tenha algum erro durante a compilacao
-        "noImplicitAny": true 
+        "noImplicitAny": true,
+        "removeComments": true
     },
     "include": [
         "app/ts/**/*"
